--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 50px;
-  height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 50px;
+    height: 100vh;
 }
 
 .button__container {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
 }
